# cfgrs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: lib.rs  main.rs
