[package]
name = "cfgrs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
pico-args = "0.5.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
toml = "0.8.15"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
